--- a/src/Services/Meetup/MeetupService.Core/MeetupService.Core.csproj
+++ b/src/Services/Meetup/MeetupService.Core/MeetupService.Core.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BuildingBlocks\Kernel\Kernel.csproj" />
+    <ProjectReference Include="..\..\..\BuildingBlocks\Kernel\Kernel.csproj" />
   </ItemGroup>
 
 </Project>
